tests/compError/aliasDoesNotExist.ucl
// compError
// error: alias 'a' does not exist
// tests/compError/aliasDoesNotExist.ucl:5 -> here

a;